--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>InkCentral </title>
+    <script src="https://kit.fontawesome.com/e9f67c88ea.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
