--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -32,7 +32,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>InkCentral </title>
-    <script src="https://kit.fontawesome.com/e9f67c88ea.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/e9f67c88ea.js"
+      crossorigin="anonymous">  
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -47,8 +50,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script 
-      src="https://unpkg.com/react/umd/react.production.min.js" 
+    <script
+      src="https://unpkg.com/react/umd/react.production.min.js"
       crossorigin>
     </script>
 
@@ -61,6 +64,10 @@
       src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin>
     </script>
-    
+
+    <script
+      type="text/javascript" src="https://checkout.epayco.co/checkout.js">
+    </script>
+
   </body>
 </html>
